# SpotifyLyricsMiniWindow

./: .env.example  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/hooks/: useSpotifyLyrics.ts
src/lib/: lrc.ts  lyrics.ts  spotify.ts
