[package]
name = "spotify-lyrics-overlay"
version = "0.1.0"
description = "Always-on-top Spotify synced lyrics overlay"
authors = ["you"]
edition = "2021"

[lib]
name = "spotify_lyrics_overlay_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
